--- a/react-app/src/components/NavBars/SideBar/SideBar.css
+++ b/react-app/src/components/NavBars/SideBar/SideBar.css
@@ -1,5 +1,5 @@
 .SidebarNav {
-    background: rgb(25,23,29);
+    background-color: rgb(25,23,29);
     width: 257px;
     height: calc(100vh - 50px);
     display: flex;
@@ -16,13 +16,36 @@
 
 .SidebarLogo > h1 {
     color: rgb(196, 202, 208);
-    margin: 12px 0 9px 10px;
+    margin: 12px 0 9px 15px;
+}
+
+.SidebarLabel {
+    display: flex;
+    color: rgb(134, 134, 136);
+}
+
+.SidebarLabel > i {
+    font-size: 15px;
+    margin: 10px 10px 10px 10px;
 }
 
 .SidebarLabel > h1 {
-    color: rgb(134, 134, 136);
     font-size: 15px;
     margin: 10px 0 10px 0;
+}
+
+.addchannelbutton {
+    font-size: 18px;
+    margin: 7px 0 0 115px;
+    /* color: rgb(25,23,29); */
+    color: rgb(196, 202, 208);
+}
+
+.adddmbutton {
+    font-size: 18px;
+    margin: 7px 0 0 70px;
+    /* color: rgb(25,23,29); */
+    color: rgb(196, 202, 208);
 }
 
 .SidebarLabels {
